tests/error/errors_on_usage/shadow_param.err
Error: Variable not defined (at $FILE:9:11)
  | 
7 |     if b:
8 |         n = nat(42)
9 |     return n
  |            ^ `n` might be undefined ...
  | 
7 |     if b:
  |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
